<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
        android:id="@+id/web_thumbnail"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:contentDescription="@string/thumbnail_url"
        android:layout_margin="5dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_language"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />
    <TextView
        android:id = "@+id/web_title"
        android:layout_width="0dp"
        app:layout_constraintWidth_default="wrap"
        android:layout_height="wrap_content"
        android:text="@string/list_view_title"
        android:paddingRight="10dp"
        android:paddingLeft="10dp"
        android:paddingTop="11dp"
        android:paddingBottom="1dp"
        android:textStyle="bold"
        android:scrollHorizontally="true"
        android:ellipsize="end"
        android:textSize="16sp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintVertical_bias="0.75"
        app:layout_constraintLeft_toRightOf="@id/web_thumbnail"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:maxLines="2" />

    <TextView
        android:id="@+id/web_url"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:hyphenationFrequency="none"
        android:maxLines="2"
        android:paddingBottom="9dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="1dp"
        android:scrollHorizontally="true"
        android:text="@string/url_list_view_title"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toRightOf="@id/web_thumbnail"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/web_title"
        app:layout_constraintVertical_bias="0.75"
        app:layout_constraintWidth_default="wrap" />
</android.support.constraint.ConstraintLayout>

